# jupyter-tombi-language-server

./: README.md  jupyter_tombi_language_server.py  pyproject.toml
.github/workflows/: release.yml
jupyter_tombi_language_server/: spec.py
jupyter_tombi_language_server/schema/: tombi.json
