[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "jupyter-tombi-language-server"
repository = "https://github.com/agoose77/jupyter-tombi-language-server.git"
dependencies = [
  "jupyter_lsp",
  "traitlets",
  "tombi"
]
version = "0.1.0"
readme = "README.md"
description = "A plugin for Jupyter LSP that adds support for tombi, the TOML LSP"

[project.entry-points.jupyter_lsp_spec_v1]
tombi-language-server = "jupyter_tombi_language_server.spec:tombi"

